fixed bug text Dark Mode

--- a/src/assets/styles/components/detailCountry.scss
+++ b/src/assets/styles/components/detailCountry.scss
@@ -25,7 +25,7 @@
     -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 
     &.border {
-      margin: 5px;
+      margin: 10px 10px 0px 0;
     }
 
     body.dark & {
