--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -19,6 +19,7 @@
 
   &--buttom {
     font-weight: 600;
+    cursor: pointer;
   }
 
   body.dark & {
